2003-02-21  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestPlatform.cpp (CeCosTestPlatform::Load): Allow an
	extra character for string termination when retrieving registry
	key names.

2003-02-13  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestPlatform.cpp:
	Look for all persistent application settings under
        "HKEY_CURRENT_USER\Software\eCos Configuration Tool\"
	for consistency.

2003-02-05  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTest.cpp (CygPath): Get the cygdrive prefix from
	the registry.

2003-01-20  John Dallaway  <jld@ecoscentric.com>

	* common/eCosTestPlatform.cpp (CProperties::CreateKey):
	"sizeof TCHAR" -> "sizeof (TCHAR)" for GNU headers.

2001-02-20  Jonathan Larmour  <jlarmour@redhat.com>

	* common/eCosTestClient.cpp (LocateExecutables): Add /sbin and
	/usr/sbin to path before trying to run fuser.

2000-09-28  Jesper Skov  <jskov@redhat.com>

	* common/eCosTestSerialFilter.cpp (CMD_TestBinary): Reset counter
	for each test so the failure data is the same from two different
	runs of the test.

2000-09-15  Jesper Skov  <jskov@redhat.com>

	* common/ser_filter.cpp (main): Don't require ResourceServer.

	* common/Makefile.am: Added ser_filter handling.
	* common/Makefile.in: Ditto.
	* common/configure: Ditto.
	* common/configure.in: Ditto.
	* common/eCosTest.cpp: Fix typo.

2000-08-16  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* common/ser_filter.cpp (main): Clean up warning

2000-08-08  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* common/eCosTestSerialFilter.h: Update flow_cfg_t values for correct
	target settings

2000-08-01  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* common/eCosTestSerialFilter.cpp (PrintHex): Print out more printable
	chars
	(SetConfig): Support flow control
	(ParseConfig): Support target setting of flow control
	(CMD_TestBinary): Don't output XON/XOFF. Output 255 chars not 256
	to make buffer problems more obvious.

	* common/eCosTestDownloadFilter.h: Allow SET_VALUE to set optional args